# air-quality-autonomous-robot

./: .gitignore  README.md
ros2/air_clean_robot/: package.xml  setup.cfg  setup.py
ros2/air_clean_robot/air_clean_robot/: air_clean_astar_controller.py  air_clean_gui.py  air_clean_pure_controller.py  air_quality_task_manager.py  amcl_pose_mqtt_publisher.py  astar_follower.py  battery_state_mqtt_publisher.py  cmd_mqtt_subscriber.py  dust_cells_mqtt_publisher.py  manual_nav_controller.py  mqtt_cmd_bridge.py  serial_air_quality_node.py  sim_air_quality_publisher.py
ros2/air_clean_robot/config/: air_clean_params.yaml
ros2/air_clean_robot/launch/: air_clean_all.launch.py  air_clean_astar.launch.py  air_clean_full.launch.py  air_clean_gui.launch.py  air_clean_localization.launch.py  air_clean_manual.launch.py  air_clean_serial.launch.py  air_clean_sim.launch.py  air_clean_web_bridge.launch.py
ros2/dust_mapping/: package.xml  setup.cfg  setup.py
ros2/dust_mapping/config/: dust_mapping_params.yaml
ros2/dust_mapping/dust_mapping/: dust_map_viewer.py  dust_mapper.py  mqtt_pm_listener.py
ros2/dust_mapping/launch/: dust_map.launch.py
spring-boot/: HELP.md  build.gradle  settings.gradle
spring-boot/src/main/java/com/example/robotweb/: RobotWebApplication.java
spring-boot/src/main/java/com/example/robotweb/config/: DataInitializer.java
spring-boot/src/main/java/com/example/robotweb/controller/: HomeController.java  PmSensorApiController.java  RobotPathApiController.java  RobotStatusApiController.java
spring-boot/src/main/java/com/example/robotweb/dto/: RobotBatteryDto.java  RobotPoseDto.java
spring-boot/src/main/java/com/example/robotweb/entity/: PmSensorData.java  RobotStatus.java
spring-boot/src/main/java/com/example/robotweb/mqtt/: MqttCommandPublisher.java  MqttPmSubscriber.java  MqttRobotBatterySubscriber.java  MqttRobotDustSubscriber.java  MqttRobotPathSubscriber.java  MqttRobotPoseSubscriber.java
spring-boot/src/main/resources/: application.properties
spring-boot/src/main/resources/templates/: dashboard3d.html  home.html
spring-boot/src/test/java/com/example/robotweb/: RobotWebApplicationTests.java
(+6 files in other folders)
